--- a/prayerweb/DailyReading/6.html
+++ b/prayerweb/DailyReading/6.html
@@ -56,7 +56,7 @@
         <tr>
 
             <td align="center" width="15%" valign="top" >1</td>
-            <td  width="75%"><a href="#" onclick="remoteStartBible('Psalm+119:89-176')">Psalm 119:89-176</a>     </td>
+            <td  width="75%"><a href="#" onclick="remoteStartBible('Psalm+119:89-175;Psalm+119:176;')">Psalm 119:89-176</a>     </td>
         </tr>
         <tr>
 
