Added semicolon on some scripture arguments

--- a/prayerweb/DailyReading/11.html
+++ b/prayerweb/DailyReading/11.html
@@ -67,49 +67,49 @@
 
             <td align="center" width="15%" valign="top"  >3</td>
             <td   width="75%">
-                <a href="javascript:remoteStartBible('Mark+11;John+12')">Mark 11; John 12</a>
+                <a href="javascript:remoteStartBible('Mark+11;John+12;')">Mark 11; John 12</a>
             </td>
         </tr>
         <tr>
 
             <td align="center" width="15%" valign="top"  >4</td>
             <td   width="75%">
-                <a href="javascript:remoteStartBible('Matthew+22;Mark+12')">Matthew 22; Mark 12</a>
+                <a href="javascript:remoteStartBible('Matthew+22;Mark+12;')">Matthew 22; Mark 12</a>
             </td>
         </tr>
         <tr>
 
             <td align="center" width="15%" valign="top"  >5</td>
             <td   width="75%">
-                <a href="javascript:remoteStartBible('Matthew+23;Luke+20-21')">Matthew 23; Luke 20-21</a>
+                <a href="javascript:remoteStartBible('Matthew+23;Luke+20-21;')">Matthew 23; Luke 20-21</a>
             </td>
         </tr>
         <tr>
 
             <td align="center" width="15%" valign="top"  >6</td>
-            <td   width="75%"><a href="javascript:remoteStartBible('Mark+13')">Mark 13</a>     </td>
+            <td   width="75%"><a href="javascript:remoteStartBible('Mark+13;')">Mark 13</a>     </td>
         </tr>
         <tr>
 
             <td align="center" width="15%" valign="top"  >7</td>
-            <td   width="75%"><a href="javascript:remoteStartBible('Matthew+24')">Matthew 24</a>     </td>
+            <td   width="75%"><a href="javascript:remoteStartBible('Matthew+24;')">Matthew 24</a>     </td>
         </tr>
         <tr>
 
             <td align="center" width="15%" valign="top"  >8</td>
-            <td   width="75%"><a href="javascript:remoteStartBible('Matthew+25')">Matthew 25</a>     </td>
+            <td   width="75%"><a href="javascript:remoteStartBible('Matthew+25;')">Matthew 25</a>     </td>
         </tr>
         <tr>
 
             <td align="center" width="15%" valign="top"  >9</td>
             <td   width="75%">
-                <a href="javascript:remoteStartBible('Matthew+26;Mark+14')">Matthew 26; Mark 14</a>
+                <a href="javascript:remoteStartBible('Matthew+26;Mark+14;')">Matthew 26; Mark 14</a>
             </td>
         </tr>
         <tr>
 
             <td align="center" width="15%" valign="top"  >10</td>
-            <td   width="75%"><a href="javascript:remoteStartBible('Luke+22;John+13')">Luke 22; John 13</a>     </td>
+            <td   width="75%"><a href="javascript:remoteStartBible('Luke+22;John+13;')">Luke 22; John 13</a>     </td>
         </tr>
         <tr>
 
@@ -119,22 +119,22 @@
         <tr>
 
             <td align="center" width="15%" valign="top"  >12</td>
-            <td   width="75%"><a href="javascript:remoteStartBible('Matthew+27;Mark+15')">Matthew 27; Mark 15</a>     </td>
+            <td   width="75%"><a href="javascript:remoteStartBible('Matthew+27;Mark+15;')">Matthew 27; Mark 15</a>     </td>
         </tr>
         <tr>
 
             <td align="center" width="15%" valign="top"  >13</td>
-            <td   width="75%"><a href="javascript:remoteStartBible('Luke+23;John+18-19')">Luke 23; John 18-19</a>     </td>
+            <td   width="75%"><a href="javascript:remoteStartBible('Luke+23;John+18-19;')">Luke 23; John 18-19</a>     </td>
         </tr>
         <tr>
 
             <td align="center" width="15%" valign="top"  >14</td>
-            <td   width="75%"><a href="javascript:remoteStartBible('Matthew+28;Mark+16')">Matthew 28; Mark 16</a>     </td>
+            <td   width="75%"><a href="javascript:remoteStartBible('Matthew+28;Mark+16;')">Matthew 28; Mark 16</a>     </td>
         </tr>
         <tr>
 
             <td align="center" width="15%" valign="top"  >15</td>
-            <td   width="75%"><a href="javascript:remoteStartBible('Luke+24;John+20-21')">Luke 24; John 20-21</a>     </td>
+            <td   width="75%"><a href="javascript:remoteStartBible('Luke+24;John+20-21;')">Luke 24; John 20-21</a>     </td>
         </tr>
         <tr>
 
@@ -195,7 +195,7 @@
 
             <td align="center" width="15%" valign="top"  >27</td>
             <td   width="75%">
-                <a href="javascript:remoteStartBible('1+Thessalonians+1-5;2+Thessalonians+1-3')">1 Thessalonians; 2 Thessalonians</a>
+                <a href="javascript:remoteStartBible('1+Thessalonians+1-5;2+Thessalonians+1-3;')">1 Thessalonians; 2 Thessalonians</a>
             </td>
         </tr>
         <tr>
