--- a/prayerweb/DailyReading/10.html
+++ b/prayerweb/DailyReading/10.html
@@ -56,27 +56,27 @@
         <tr>
 
             <td align="center" width="15%" valign="top"  >1</td>
-            <td width="75%"><a href="javascript:remoteStartBible('Luke+1;John+1:1-14')">Luke 1; John 1:1-14</a></td>
+            <td width="75%"><a href="javascript:remoteStartBible('Luke+1;John+1:1-14';)">Luke 1; John 1:1-14</a></td>
         </tr>
         <tr>
 
             <td align="center" width="15%" valign="top"  >2</td>
-            <td width="75%"><a href="javascript:remoteStartBible('Matthew+1;Luke+2:1-38')">Matthew 1; Luke 2:1-38</a>     </td>
+            <td width="75%"><a href="javascript:remoteStartBible('Matthew+1;Luke+2:1-38;')">Matthew 1; Luke 2:1-38</a>     </td>
         </tr>
         <tr>
 
             <td align="center" width="15%" valign="top"  >3</td>
-            <td width="75%"><a href="javascript:remoteStartBible('Matthew+2;Luke+2:39-52')">Matthew 2; Luke 2:39-52</a>     </td>
+            <td width="75%"><a href="javascript:remoteStartBible('Matthew+2;Luke+2:39-52;')">Matthew 2; Luke 2:39-52</a>     </td>
         </tr>
         <tr>
 
             <td align="center" width="15%" valign="top"  >4</td>
-            <td width="75%"><a href="javascript:remoteStartBible('Matthew+3;Mark+1;Luke+3')">Matthew 3; Mark 1; Luke 3</a>     </td>
+            <td width="75%"><a href="javascript:remoteStartBible('Matthew+3;Mark+1;Luke+3;')">Matthew 3; Mark 1; Luke 3</a>     </td>
         </tr>
         <tr>
 
             <td align="center" width="15%" valign="top"  >5</td>
-            <td width="75%"><a href="javascript:remoteStartBible('Matthew+4;Luke+4-5;John+1:15-51')">Matthew 4; Luke 4-5; John 1:15-51</a>     </td>
+            <td width="75%"><a href="javascript:remoteStartBible('Matthew+4;Luke+4-5;John+1:15-51;')">Matthew 4; Luke 4-5; John 1:15-51</a>     </td>
         </tr>
         <tr>
 
@@ -86,17 +86,17 @@
         <tr>
 
             <td align="center" width="15%" valign="top"  >7</td>
-            <td width="75%"><a href="javascript:remoteStartBible('Mark+2')">Mark 2</a>     </td>
+            <td width="75%"><a href="javascript:remoteStartBible('Mark+2;')">Mark 2</a>     </td>
         </tr>
         <tr>
 
             <td align="center" width="15%" valign="top"  >8</td>
-            <td width="75%"><a href="javascript:remoteStartBible('John+5')">John 5</a>     </td>
+            <td width="75%"><a href="javascript:remoteStartBible('John+5;')">John 5</a>     </td>
         </tr>
         <tr>
 
             <td align="center" width="15%" valign="top"  >9</td>
-            <td width="75%"><a href="javascript:remoteStartBible('Matthew+12:1-21;Mark+3;Luke+6')">Matthew 12:1-21; Mark 3; Luke 6</a>     </td>
+            <td width="75%"><a href="javascript:remoteStartBible('Matthew+12:1-21;Mark+3;Luke+6;')">Matthew 12:1-21; Mark 3; Luke 6</a>     </td>
         </tr>
         <tr>
 
@@ -106,27 +106,27 @@
         <tr>
 
             <td align="center" width="15%" valign="top"  >11</td>
-            <td width="75%"><a href="javascript:remoteStartBible('Matthew+8:1-13;Luke+7')">Matthew 8:1-13; Luke 7</a>     </td>
+            <td width="75%"><a href="javascript:remoteStartBible('Matthew+8:1-13;Luke+7;')">Matthew 8:1-13; Luke 7</a>     </td>
         </tr>
         <tr>
 
             <td align="center" width="15%" valign="top"  >12</td>
-            <td width="75%"><a href="javascript:remoteStartBible('Matthew+11')">Matthew 11</a>     </td>
+            <td width="75%"><a href="javascript:remoteStartBible('Matthew+11;')">Matthew 11</a>     </td>
         </tr>
         <tr>
 
             <td align="center" width="15%" valign="top"  >13</td>
-            <td width="75%"><a href="javascript:remoteStartBible('Matthew+12:22-50;Luke+11')">Matthew 12:22-50; Luke 11</a>     </td>
+            <td width="75%"><a href="javascript:remoteStartBible('Matthew+12:22-50;Luke+11;')">Matthew 12:22-50; Luke 11</a>     </td>
         </tr>
         <tr>
 
             <td align="center" width="15%" valign="top"  >14</td>
-            <td width="75%"><a href="javascript:remoteStartBible('Matthew+13;Luke+8')">Matthew 13; Luke 8</a>     </td>
+            <td width="75%"><a href="javascript:remoteStartBible('Matthew+13;Luke+8;')">Matthew 13; Luke 8</a>     </td>
         </tr>
         <tr>
 
             <td align="center" width="15%" valign="top"  >15</td>
-            <td width="75%"><a href="javascript:remoteStartBible('Matthew+8:14-34;Mark+4-5')">Matthew 8:14-34; Mark 4-5</a>     </td>
+            <td width="75%"><a href="javascript:remoteStartBible('Matthew+8:14-34;Mark+4-5;')">Matthew 8:14-34; Mark 4-5</a>     </td>
         </tr>
         <tr>
 
@@ -136,32 +136,32 @@
         <tr>
 
             <td align="center" width="15%" valign="top"  >17</td>
-            <td width="75%"><a href="javascript:remoteStartBible('Matthew+14;Mark+6;Luke+9:1-17')">Matthew 14; Mark 6; Luke 9:1-17</a>     </td>
+            <td width="75%"><a href="javascript:remoteStartBible('Matthew+14;Mark+6;Luke+9:1-17;')">Matthew 14; Mark 6; Luke 9:1-17</a>     </td>
         </tr>
         <tr>
 
             <td align="center" width="15%" valign="top"  >18</td>
-            <td width="75%"><a href="javascript:remoteStartBible('John+6')">John 6</a>     </td>
+            <td width="75%"><a href="javascript:remoteStartBible('John+6;')">John 6</a>     </td>
         </tr>
         <tr>
 
             <td align="center" width="15%" valign="top"  >19</td>
-            <td width="75%"><a href="javascript:remoteStartBible('Matthew+15;Mark+7')">Matthew 15; Mark 7</a>     </td>
+            <td width="75%"><a href="javascript:remoteStartBible('Matthew+15;Mark+7;')">Matthew 15; Mark 7</a>     </td>
         </tr>
         <tr>
 
             <td align="center" width="15%" valign="top"  >20</td>
-            <td width="75%"><a href="javascript:remoteStartBible('Matthew+16;Mark+8;Luke+9:18-27')">Matthew 16; Mark 8; Luke 9:18-27</a>     </td>
+            <td width="75%"><a href="javascript:remoteStartBible('Matthew+16;Mark+8;Luke+9:18-27;')">Matthew 16; Mark 8; Luke 9:18-27</a>     </td>
         </tr>
         <tr>
 
             <td align="center" width="15%" valign="top"  >21</td>
-            <td width="75%"><a href="javascript:remoteStartBible('Matthew+17;Mark+9;Luke+9:28-62')">Matthew 17; Mark 9; Luke 9:28-62</a>     </td>
+            <td width="75%"><a href="javascript:remoteStartBible('Matthew+17;Mark+9;Luke+9:28-62;')">Matthew 17; Mark 9; Luke 9:28-62</a>     </td>
         </tr>
         <tr>
 
             <td align="center" width="15%" valign="top"  >22</td>
-            <td width="75%"><a href="javascript:remoteStartBible('Matthew+18')">Matthew 18</a>     </td>
+            <td width="75%"><a href="javascript:remoteStartBible('Matthew+18;')">Matthew 18</a>     </td>
         </tr>
         <tr>
 
@@ -176,7 +176,7 @@
         <tr>
 
             <td align="center" width="15%" valign="top"  >25</td>
-            <td width="75%"><a href="javascript:remoteStartBible('Luke+10-11;John+10:22-42')">Luke 10-11; John 10:22-42</a>     </td>
+            <td width="75%"><a href="javascript:remoteStartBible('Luke+10-11;John+10:22-42;')">Luke 10-11; John 10:22-42</a>     </td>
         </tr>
         <tr>
 
@@ -196,7 +196,7 @@
         <tr>
 
             <td align="center" width="15%" valign="top"  >29</td>
-            <td width="75%"><a href="javascript:remoteStartBible('John+11')">John 11</a>     </td>
+            <td width="75%"><a href="javascript:remoteStartBible('John+11;')">John 11</a>     </td>
         </tr>
         <tr>
 
@@ -206,7 +206,7 @@
         <tr>
 
             <td align="center" width="15%" valign="top"  >31</td>
-            <td width="75%"><a href="javascript:remoteStartBible('Matthew+19;Mark+10')">Matthew 19; Mark 10</a>     </td>
+            <td width="75%"><a href="javascript:remoteStartBible('Matthew+19;Mark+10;')">Matthew 19; Mark 10</a>     </td>
         </tr>
 
         <tr>
