--- a/prayerweb/DailyReading/12.html
+++ b/prayerweb/DailyReading/12.html
@@ -87,7 +87,7 @@
 
             <td align="center" width="15%" valign="top" >7</td>
             <td  width="75%">
-                <a href="javascript:remoteStartBible('Acts+20:1-3;Romans+1-3')">Acts 20:1-3; Romans 1-3</a>
+                <a href="javascript:remoteStartBible('Acts+20:1-3;Romans+1-3;')">Acts 20:1-3; Romans 1-3</a>
             </td>
         </tr>
         <tr>
