Reverted back after test

--- a/prayerweb/DailyReading/10.html
+++ b/prayerweb/DailyReading/10.html
@@ -91,7 +91,7 @@
         <tr>
 
             <td align="center" width="15%" valign="top"  >8</td>
-            <td width="75%"><a href="javascript:remoteStartBible('John+5:1-47;')">John 5</a>     </td>
+            <td width="75%"><a href="javascript:remoteStartBible('John+5;')">John 5</a>     </td>
         </tr>
         <tr>
 
