Updated to reflect past classes taught.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
     JavaScript application design and development. I have designed and implemented several Internet based systems ranging from static “brochureware” sites to 
     dynamic e-commerce solutions.</p>
     Concerning my functioning as part-time faculty, I am utilizing my experience and teaching Business 
-    Application Development, Introduction to Database, as well as Information Technology Governance at a local university.</p>
+    Application Development as well as Introduction to Database, Systems Management, and Information Technology Governance
+    at a local university.</p>
     
     <!-- (About Section) What I am doing lately -->
   <p class="w3-large w3-center w3-padding-16">Lately, I spend my time doing:</p>
