--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   </div>
   <!-- (About Section) What I have done career -->
   <p class="w3-large w3-center w3-padding-16">Previously, in my career, my time was spent on:</p>
-  <p class="w3-wide"><i class="fa fa-laptop"></i> HTML/CSS</p>
+  <p class="w3-wide"><i class="fa fa-file-code-o"></i> HTML/CSS</p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:20%">20%</div>
   </div>
