--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:5%">5%</div>
   </div>
-  <p class="w3-wide"><i class="fa fa-photo"></i> C# and JavaScript Development</p>
+  <p class="w3-wide"><i class="fa fa-file-code-o"></i> C# and JavaScript Development</p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:5%">5%</div>
   </div>
@@ -109,28 +109,31 @@
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:20%">20%</div>
   </div>
-  <p class="w3-wide"><i class="fa fa-laptop"></i> Classic ASP</p>
+  <p class="w3-wide"><i class="fa fa-file-code-o"></i> Classic ASP</p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:15%">15%</div>
   </div>
-  <p class="w3-wide"><i class="fa fa-laptop"></i> C#</p>
+  <p class="w3-wide"><i class="fa fa-file-code-o"></i> C#</p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:20%">20%</div>
   </div>
-  <p class="w3-wide"><i class="fa fa-laptop"></i> Java</p>
+  <p class="w3-wide"><i class="fa fa-file-code-o"></i> Java</p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:20%">20%</div>
   </div>
-  <p class="w3-wide"><i class="fa fa-laptop"></i> JavaScript</p>
+  <p class="w3-wide"><i class="fa fa-file-code-o"></i> JavaScript</p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:10%">10%</div>
   </div>
-  <p class="w3-wide"><i class="fa fa-laptop"></i> Web Development</p>
+  <p class="w3-wide"><i class="fa fa-file-code-o"></i> Web Development</p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:15%">15%</div>
   </div>
 </div>
-
+  <p class="w3-wide"><i class="fa fa-laptop"></i> Network Administration</p>
+    <div class="w3-light-grey">
+	    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:30%">30%</div>
+    </div>
 <!-- banner section - years experience and project number -->
 <div class="w3-row w3-center w3-dark-grey w3-padding-16">
   <div class="w3-half w3-section">
