--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
     
     <!-- (About Section) What I am doing lately -->
   <p class="w3-large w3-center w3-padding-16">Lately, I spend my time doing:</p>
-  <p class="w3-wide"><i class="fa fa-filter"></i> IBM API Connect Development</p>
+  <p class="w3-wide"><i class="fa fa-file-code-o"></i> IBM API Connect Development</p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:70%">75%</div>
   </div>
-  <p class="w3-wide"><i class="fa fa-filter"></i> Integration Service Development (IBM Integration Bus)</p>
+  <p class="w3-wide"><i class="fa fa-file-code-o"></i> Integration Service Development (IBM Integration Bus)</p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:5%">5%</div>
   </div>
