--- a/prayerweb/DailyReading/11.html
+++ b/prayerweb/DailyReading/11.html
@@ -189,7 +189,7 @@
         <tr>
 
             <td align="center" width="15%" valign="top"  >26</td>
-            <td   width="75%"><a href="javascript:remoteStartBible('Acts+17;Acts+18;')">Acts 17-18:18</a>     </td>
+            <td   width="75%"><a href="javascript:remoteStartBible('Acts+17;Acts+18:1-18;')">Acts 17-18:18</a>     </td>
         </tr>
         <tr>
 
