Update 11.html for 28th verse

--- a/prayerweb/DailyReading/11.html
+++ b/prayerweb/DailyReading/11.html
@@ -201,7 +201,7 @@
         <tr>
 
             <td align="center" width="15%" valign="top"  >28</td>
-            <td   width="75%"><a href="javascript:remoteStartBible('Acts+18;Acts+19;')">Acts 18:19-19:41</a>     </td>
+            <td   width="75%"><a href="javascript:remoteStartBible('Acts+18:19-28;Acts+19;')">Acts 18:19-19:41</a>     </td>
         </tr>
         <tr>
 
