Update verses to display exact reading

--- a/prayerweb/DailyReading/10.html
+++ b/prayerweb/DailyReading/10.html
@@ -201,7 +201,7 @@
         <tr>
 
             <td align="center" width="15%" valign="top"  >30</td>
-            <td width="75%"><a href="javascript:remoteStartBible('Luke+17;Luke+18;')">Luke 17:11-18:14</a>     </td>
+            <td width="75%"><a href="javascript:remoteStartBible('Luke+17;Luke+18:1-14;')">Luke 17:11-18:14</a>     </td>
         </tr>
         <tr>
 
