--- a/prayerweb/DailyReading/12.html
+++ b/prayerweb/DailyReading/12.html
@@ -113,7 +113,7 @@
         <tr>
 
             <td align="center" width="15%" valign="top" >12</td>
-            <td  width="75%"><a href="javascript:remoteStartBible('Acts+20;Acts+21;Acts+22;Acts+23;')">Acts 20:4-23:35</a>     </td>
+            <td  width="75%"><a href="javascript:remoteStartBible('Acts+20:4-38;Acts+21;Acts+22;Acts+23;')">Acts 20:4 - Acts 23</a>     </td>
         </tr>
         <tr>
 
