Update directory name

--- a/circlecss/makecircle.html
+++ b/circlecss/makecircle.html
@@ -11,8 +11,8 @@
             width: 40em;
             height: 40em;
             border-radius: 50%;
-            background-color: #108cc3;
-            border: 4px solid #108cc3;
+            background-color: #e7ebec;
+            border: 4px solid #e7ebec;
             box-shadow: inset 0 0 0 5px white;
         }
     </style>
