Add chapters that were missing for 1/3

--- a/prayerweb/DailyReading/1.html
+++ b/prayerweb/DailyReading/1.html
@@ -62,7 +62,8 @@
         </tr>
         <tr>
             <td align="center"  valign="top" width="15%">3</td>
-            <td  width="75%"><a href="javascript:remoteStartBible('')">Genesis 8-11</a> </td>
+            <td width="75%"><a href="javascript:remoteStartBible('Genesis+8;Genesis+9;Genesis+10;Genesis+11;')">Genesis 8-11</a>
+            </td>
         </tr>
         <tr>
             <td align="center"  valign="top" width="15%">4</td>
