Edit verse params to end at chapter

--- a/prayerweb/DailyReading/10.html
+++ b/prayerweb/DailyReading/10.html
@@ -86,12 +86,12 @@
         <tr>
 
             <td align="center" width="15%" valign="top"  >7</td>
-            <td width="75%"><a href="javascript:remoteStartBible('Mark+2;')">Mark 2</a>     </td>
+            <td width="75%"><a href="javascript:remoteStartBible('Mark+2:1-27;Mark+2:28;')">Mark 2</a>     </td>
         </tr>
         <tr>
 
             <td align="center" width="15%" valign="top"  >8</td>
-            <td width="75%"><a href="javascript:remoteStartBible('John+5;')">John 5</a>     </td>
+            <td width="75%"><a href="javascript:remoteStartBible('John+5:1-46;John+5:47;')">John 5</a>     </td>
         </tr>
         <tr>
 
