--- a/prayerweb/DailyReading/11.html
+++ b/prayerweb/DailyReading/11.html
@@ -87,17 +87,17 @@
         <tr>
 
             <td align="center" width="15%" valign="top"  >6</td>
-            <td   width="75%"><a href="javascript:remoteStartBible('Mark+13;')">Mark 13</a>     </td>
+            <td   width="75%"><a href="javascript:remoteStartBible('Mark+13:1-36;Mark+13:37;')">Mark 13</a>     </td>
         </tr>
         <tr>
 
             <td align="center" width="15%" valign="top"  >7</td>
-            <td   width="75%"><a href="javascript:remoteStartBible('Matthew+24;')">Matthew 24</a>     </td>
+            <td   width="75%"><a href="javascript:remoteStartBible('Matthew+24:1-50;Matthew+24:51;')">Matthew 24</a>     </td>
         </tr>
         <tr>
 
             <td align="center" width="15%" valign="top"  >8</td>
-            <td   width="75%"><a href="javascript:remoteStartBible('Matthew+25;')">Matthew 25</a>     </td>
+            <td   width="75%"><a href="javascript:remoteStartBible('Matthew+25:1-45;Matthew+25:46;')">Matthew 25</a>     </td>
         </tr>
         <tr>
 
