--- a/prayerweb/DailyReading/2.html
+++ b/prayerweb/DailyReading/2.html
@@ -200,7 +200,7 @@
         <tr>
 
             <td align="center" width="15%" valign="top" >26</td>
-            <td  width="75%"><a href="javascript:remoteStartBible('Numbers+7')">Numbers 7</a>     </td>
+            <td  width="75%"><a href="javascript:remoteStartBible('Numbers+7:1-88;Numbers+7:89')">Numbers 7</a>     </td>
         </tr>
         <tr>
 
