--- a/prayerweb/DailyReading/5.html
+++ b/prayerweb/DailyReading/5.html
@@ -60,7 +60,7 @@
         </tr>
         <tr>
             <td align="center" width="15%" valign="top" >2</td>
-            <td  width="75%"><a href="javascript:remoteStartBible('Psalm+133')">Psalm 133</a>     </td>
+            <td  width="75%"><a href="javascript:remoteStartBible('Psalm+133:1-2;Psalm+133:3')">Psalm 133</a>     </td>
         </tr>
         <tr>
             <td align="center" width="15%" valign="top" >3</td>
