Update April 27th scripture to only the chapter reading

--- a/prayerweb/DailyReading/4.html
+++ b/prayerweb/DailyReading/4.html
@@ -209,7 +209,7 @@
 
 
             <td align="center" width="15%" valign="top" >27</td>
-            <td  width="75%"><a href="javascript:remoteStartBible('1+Chronicles+6')">1 Chronicles 6</a>     </td>
+            <td  width="75%"><a href="javascript:remoteStartBible('1+Chronicles+6:1-80;1+Chronicles+6:81')">1 Chronicles 6</a>     </td>
         </tr>
         <tr>
 
