--- a/prayerweb/DailyReading/10.html
+++ b/prayerweb/DailyReading/10.html
@@ -56,7 +56,7 @@
         <tr>
 
             <td align="center" width="15%" valign="top"  >1</td>
-            <td width="75%"><a href="javascript:remoteStartBible('Luke+1;John+1:1-14';)">Luke 1; John 1:1-14</a></td>
+            <td width="75%"><a href="javascript:remoteStartBible('Luke+1;John+1:1-14;')">Luke 1; John 1:1-14</a></td>
         </tr>
         <tr>
 
