Update Matthew 11 passage

--- a/prayerweb/DailyReading/10.html
+++ b/prayerweb/DailyReading/10.html
@@ -111,7 +111,7 @@
         <tr>
 
             <td align="center" width="15%" valign="top"  >12</td>
-            <td width="75%"><a href="javascript:remoteStartBible('Matthew+11;')">Matthew 11</a>     </td>
+            <td width="75%"><a href="javascript:remoteStartBible('Matthew+11:1-23;Matthew+11:24;')">Matthew 11</a>     </td>
         </tr>
         <tr>
 
