Update 10.html for John 6 reading to display only that chapter.

--- a/prayerweb/DailyReading/10.html
+++ b/prayerweb/DailyReading/10.html
@@ -141,7 +141,7 @@
         <tr>
 
             <td align="center" width="15%" valign="top"  >18</td>
-            <td width="75%"><a href="javascript:remoteStartBible('John+6;')">John 6</a>     </td>
+            <td width="75%"><a href="javascript:remoteStartBible('John+6:1-70;John 6:71;')">John 6</a>     </td>
         </tr>
         <tr>
 
