--- a/prayerweb/DailyReading/10.html
+++ b/prayerweb/DailyReading/10.html
@@ -161,7 +161,7 @@
         <tr>
 
             <td align="center" width="15%" valign="top"  >22</td>
-            <td width="75%"><a href="javascript:remoteStartBible('Matthew+18;')">Matthew 18</a>     </td>
+            <td width="75%"><a href="javascript:remoteStartBible('Matthew+18:1-34;Matthew+18:35;')">Matthew 18</a>     </td>
         </tr>
         <tr>
 
