Update October 28th remoteStartBible method params

--- a/prayerweb/DailyReading/10.html
+++ b/prayerweb/DailyReading/10.html
@@ -191,7 +191,7 @@
         <tr>
 
             <td align="center" width="15%" valign="top"  >28</td>
-            <td width="75%"><a href="javascript:remoteStartBible('Luke+16;Luke+17;')">Luke 16-17:1-9;Luke+17:10</a>     </td>
+            <td width="75%"><a href="javascript:remoteStartBible('Luke+16;Luke+17:1-9;Luke+17:10;')">Luke 16-17:1-9;Luke+17:10</a>     </td>
         </tr>
         <tr>
 
