--- a/circlecss/makecircle.html
+++ b/circlecss/makecircle.html
@@ -11,6 +11,7 @@
             width: 40em;
             height: 40em;
             border-radius: 50%;
+            /* Bengal orange: #fb4f14 */
             background-color: #e7ebec;
             border: 4px solid #e7ebec;
             box-shadow: inset 0 0 0 5px white;
