feat: :zap: Updates index.html intro paragraph.

--- a/index.html
+++ b/index.html
@@ -74,14 +74,13 @@
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h3 class="w3-center">ABOUT ME</h3>
   <p class="w3-center"><em>I love technology</em></p>
-  <p>I am a Software Developer that is currently doing software development for a large insurance/financial institution as well as 
-    teaching at a local university. </p>
+  <p>I am a Software Developer that is currently doing software development for a large insurance/financial institution. </p>
     <p>I love learning new software languages and technologies. I also enjoy learning how these new 
-    tools can better serve both businesses and individuals. Moreover, I have 25 years experience in the Information Technologies 
+    tools can better serve both businesses and individuals. Moreover, I have over 27 years experience in the Information Technologies 
     field specializing in the skills of Internet technologies, Network Administration, ASP/Visual Basic, .Net, J2E, Ruby on Rails, and 
     JavaScript application design and development. I have designed and implemented several Internet based systems ranging from static “brochureware” sites to 
     dynamic e-commerce solutions.</p>
-    Concerning my functioning as part-time faculty, I am utilizing my experience and teaching Business 
+    Formerly, in addition to software development, I functioned as part-time faculty where I utilized my experience and teaching Business 
     Application Development as well as Introduction to Database, Systems Management, and Information Technology Governance
     at a local university.</p>
     
