--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Covington, KY<br>
         <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: 859.750.1953<br>
         <a href="mailto:m2web@yahoo.com"><i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i></a> Email: m2web@yahoo.com<br>
-        <a href="https://msquaredwebsvc.blogspot.com" target="_blank"><i class="fa fa-desktop fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i></a> Blog<br>
+        <a href="https://m2.fyi" target="_blank"><i class="fa fa-desktop fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i></a> Blog<br>
       </div>
       <p>Contact me and we can talk over a cup of <i class="fa fa-coffee"></i> or a pint of <i class="fa fa-beer"></i>.</p>
     </div>
